--- a/apps/recruiter-dashboard/package.json
+++ b/apps/recruiter-dashboard/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.0",
     "@repo/ui": "*",
     "next": "^14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -26,4 +28,4 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
-} 
+}
