--- a/apps/recruiter-dashboard/tsconfig.json
+++ b/apps/recruiter-dashboard/tsconfig.json
@@ -6,7 +6,10 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@repo/ui/*": ["../../packages/ui/src/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
