--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
+    "@turbo/gen": "^2.4.2",
     "prettier": "^3.5.0",
     "turbo": "^2.4.2",
     "typescript": "5.7.3"
@@ -24,6 +25,11 @@
     "agents/*"
   ],
   "dependencies": {
-    "scrapybara": "^2.2.2"
+    "scrapybara": "^2.2.2",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^4.0.6"
   }
 }
