--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,8 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "plop": "^4.0.0",
+    "@types/plop": "^2.0.1"
   }
 }
