--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^5.4.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4.0.7"
   }
 }
